--- a/src/404.html
+++ b/src/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 not found</title>
-    <link rel="stylesheet" href="../node_modules/bootswatch/dist/cyborg/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootrap.min.css">
     <script src="https://kit.fontawesome.com/c95e397b61.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalice.css">
