--- a/src/construccion.html
+++ b/src/construccion.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitio web en construcción</title>
-    <link rel="stylesheet" href="../node_modules/bootswatch/dist/cyborg/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="../node_modules/bootswatch/dist/cyborg/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="./css/bootrap.min.css">
     <script src="https://kit.fontawesome.com/c95e397b61.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalice.css">
 </head>
+
 <body>
     <div class="container d-flex flex-column justify-content-center align-items-center error">
         <i class="fas fa-hammer alert pt-4"></i>
-          <p class="p_alert">
-              Sitio web en construcción
-          </p>
-          
-          <h2  class="text-white">Para mas información visitanos en:</h2>
+        <p class="p_alert">
+            Sitio web en construcción
+        </p>
+
+        <h2 class="text-white">Para mas información visitanos en:</h2>
         <div class="icons d-flex col-md-5 justify-content-between">
             <a href="">
                 <i class="fab fa-facebook"></i>
@@ -29,11 +32,11 @@
                 <i class="fab fa-google-plus-g"></i>
 
             </a>
-           
-          </div>
-  
+
+        </div>
+
     </div>
 
-
 </body>
+
 </html>
