--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,7 @@
                     <a class="navbar-brand col-6">DesignBlog</a>
                 </div>
                 <!-- icon navbar -->
-                <button class="navbar-toggler" data-target="#collapase" data-toggle="collapse" aria-controls="collapase"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" data-target="#collapase" data-toggle="collapse" aria-controls="collapase" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="col-md-6">
@@ -37,7 +36,7 @@
                                 <a class="nav-link" href="construccion.html" tabindex="-1" aria-disabled="true">Acerca de</a>
                             </li>
                             <li class="nav-item">
-                                <a href="tienda.html" class="nav-link">Servicio</a>
+                                <a href="./tienda.html" class="nav-link">Servicio</a>
                             </li>
                         </ul>
                     </div>
@@ -49,7 +48,7 @@
             </div>
         </div>
     </nav>
-       <!-- 
+    <!-- 
                                 /*=============================================
                                 =                 main   =
                                 =============================================*/
@@ -69,11 +68,9 @@
                     <p class="lead">Acerca de nosotros</p>
                     <hr class="my-4">
                     <p>
-                        Somos una empresa que brinda servicios relacionados con el UX que nace con la idea de dar
-                        soluciones gráficas comunicacionales al mercado regional y nacional de manera integral, conformada
-                        por una unidad fuerte de trabajo, armónica y multifacética que de forma holística enriquece el resultado final de cada uno de los
-                        proyectos,gracias a que cada uno de los integrantes da lo mejor de si en función del éxito conjunto.</p> 
-                        <button class="btn btn-success ml-4" type="button">Servicio</button>
+                        Somos una empresa que brinda servicios relacionados con el UX que nace con la idea de dar soluciones gráficas comunicacionales al mercado regional y nacional de manera integral, conformada por una unidad fuerte de trabajo, armónica y multifacética que
+                        de forma holística enriquece el resultado final de cada uno de los proyectos,gracias a que cada uno de los integrantes da lo mejor de si en función del éxito conjunto.</p>
+                    <button class="btn btn-success ml-4" type="button">Servicio</button>
                 </div>
             </div>
             <div class="col-md-6">
@@ -132,8 +129,7 @@
             <div class="row text-center text-md-left mt-3 pb-3">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Nosotros</h6>
-                    <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional e internacional, sedes en diferentes partes
-                    de diferentes paises, !GRACIAS POR VISITARNOS¡
+                    <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional e internacional, sedes en diferentes partes de diferentes paises, !GRACIAS POR VISITARNOS¡
                     </p>
                 </div>
 
@@ -229,8 +225,9 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
