--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,9 @@
                             <li class="nav-item">
                                 <a href="./tienda.html" class="nav-link">Servicio</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="./admin.html" class="nav-link">Admin</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -55,7 +58,7 @@
                                  -->
 
 
-    <main class="container mt-4">
+    <main id="Inicio" class="container mt-4">
         <div class="row">
             <div class="col-md-6">
                 <!-- 
@@ -70,7 +73,7 @@
                     <p>
                         Somos una empresa que brinda servicios relacionados con el UX que nace con la idea de dar soluciones gráficas comunicacionales al mercado regional y nacional de manera integral, conformada por una unidad fuerte de trabajo, armónica y multifacética que
                         de forma holística enriquece el resultado final de cada uno de los proyectos,gracias a que cada uno de los integrantes da lo mejor de si en función del éxito conjunto.</p>
-                    <button class="btn btn-success ml-4" type="button">Servicio</button>
+                    <a class="btn btn-success ml-4" href="tienda.html">Servicio</a>
                 </div>
             </div>
             <div class="col-md-6">
@@ -95,13 +98,13 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/.jpg" class="img-thumbnail " alt="">
+                            <img src="img/zapatillas.jpg" class="img-thumbnail " alt="">
                             <div class="carousel-caption">
                                 <h3>Desarrollo Apps</h3>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/zapatilla.jpg" class="img-thumbnail " alt="">
+                            <img src="img/zapatilla2.jpg" class="img-thumbnail " alt="">
                             <div class="carousel-caption">
                                 <h3>Tiendas Virtuales</h3>
                             </div>
@@ -138,13 +141,13 @@
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Servicios</h6>
                     <p>
-                        <a href="../">Desarrollo Web</a>
+                        <a href="./construccion.html">Desarrollo Web</a>
                     </p>
                     <p>
-                        <a href="#!">Desarrollo Apps</a>
+                        <a href="./construccion.html">Desarrollo Apps</a>
                     </p>
                     <p>
-                        <a href="#!">Tiendas Virtuales</a>
+                        <a href="./construccion.html">Tiendas Virtuales</a>
                     </p>
                 </div>
 
@@ -153,16 +156,16 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Links</h6>
                     <p>
-                        <a href="construccion.html"> Tu cuenta</a>
+                        <a href="./construccion.html"> Tu cuenta</a>
                     </p>
                     <p>
-                        <a href="construccion.html">Conviertete en colaborador</a>
+                        <a href="./construccion.html">Conviertete en colaborador</a>
                     </p>
                     <p>
-                        <a href="construccion.html">Valoraciones de envio</a>
+                        <a href="./construccion.html">Valoraciones de envio</a>
                     </p>
                     <p>
-                        <a href="construccion.html">Ayuda</a>
+                        <a href="./construccion.html">Ayuda</a>
                     </p>
                 </div>
 
@@ -224,6 +227,7 @@
             </div>
         </div>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
