--- a/src/admin.html
+++ b/src/admin.html
@@ -38,6 +38,9 @@
                             <li class="nav-item">
                                 <a href="#Servicio" class="nav-link">Servicio</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="./admin.html" class="nav-link">Admin</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -113,13 +116,8 @@
 
                 </div>
                 <h1 class="col-md-12 text-center bg-text rounded">preview</h1>
-                <div class="card" style="width: 100%;">
-                    <img src="img/no-image.png" id="pr_image" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title" id="pr_name">......</h5>
-                        <small class="price-mute" id="pr_price">....</small>
-                        <button class="btn btn-primary w-100" id="confirm" type="button">confirm</button>
-                    </div>
+                <div class="card" style="width: 100%;" id="editOrPreview">
+
                 </div>
             </div>
     </main>
@@ -246,8 +244,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!-- end dependeces -->
-    <script src="./js/utils.js"></script>
     <script src="./js/localstoraje.js"></script>
+    <script src="./js/utils.js"></script>
     <script src="./js/admin.js"></script>
 </body>
 
