--- a/src/admin.html
+++ b/src/admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelance</title>
+    <title>Mi tienda</title>
     <link rel="stylesheet" href="./css/bootrap.min.css">
     <script src="https://kit.fontawesome.com/c95e397b61.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -12,18 +12,13 @@
 </head>
 
 <body>
-    <!--/*=============================================
-                                =                 navbar  =
-                                =============================================*/-->
-
-
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <div class="row">
                 <div class="col-md-2 d-flex flex-row  justify-content-between">
                     <img src="img/discount.png" class="img-fluid col-md-6" width="40px" alt="">
-                    <a class="navbar-brand">DesignBlog</a>
+                    <a class="navbar-brand">OnlineStore</a>
                 </div>
                 <!-- icon navbar -->
                 <button class="navbar-toggler" data-target="#collapase" data-toggle="collapse" aria-controls="collapase" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,10 +34,10 @@
                                 <a class="nav-link" href="construccion.html" tabindex="-1" aria-disabled="true">Acerca de</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#Servicio" class="nav-link">Servicio</a>
+                                <a href="tienda.html" class="nav-link">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./admin.html" class="nav-link">Admin</a>
+                                <a href="#Admin" class="nav-link">Admin</a>
                             </li>
                         </ul>
                     </div>
@@ -55,15 +50,9 @@
         </div>
     </nav>
     <br>
-    <br <!--==============================================m ain==============================================- ->
+    <br>
 
-
-    <main class="container">
-        <!-- 
-                                /*=============================================
-                                =                 galery   =
-                                =============================================*/
-                                 -->
+    <main id="Admin" class="container">
         <div class="row">
 
             <div class="col-md-8">
@@ -74,11 +63,11 @@
 
                     <nav class="nav nav-tabs col-md-8 ml-4 text-center bg-dark rounded" id="nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link " href="#" data-tab="addProduct"="">add product</a>
+                            <a class="nav-link " href="#" data-tab="addProduct"="">Agregar productos</a>
                         </li>
                         <li class="nav-item">
                             <!-- <a class="nav-link active" href="#addProduct">add product</a> -->
-                            <a class="nav-link" href="#" data-tab="products">products</a>
+                            <a class="nav-link" href="#" data-tab="products">Productos</a>
                         </li>
 
                     </nav>
@@ -97,7 +86,7 @@
                                 <!-- <button class="btn btn-success col-sm-2" type="button">Nueva compra</button> -->
                             </div>
                             <div class="form-group row">
-                                <label for="price" class="col-sm-2 col-form-label">precio</label>
+                                <label for="price" class="col-sm-2 col-form-label">Precio</label>
                                 <div class="col-sm-8">
                                     <input type="number" class="form-control" id="price">
                                 </div>
@@ -118,7 +107,7 @@
                 <div class="space col-12">
 
                 </div>
-                <h1 class="col-md-12 text-center bg-text rounded">preview</h1>
+                <h1 class="col-md-12 text-center bg-text rounded">Pre-vizulación</h1>
                 <div class="card" style="width: 100%;" id="editOrPreview">
 
                 </div>
@@ -147,22 +136,23 @@
             <div class="row text-center text-md-left mt-3 pb-3">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Nosotros</h6>
-                    <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional e internacional, sedes en diferentes partes de diferentes paises, !GRACIAS POR VISITARNOS¡
+                    <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional, con sedes en diferentes partes del país,
+                        <br> !GRACIAS POR VISITARNOS¡
                     </p>
                 </div>
 
                 <hr class="w-100 clearfix d-md-none">
 
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Servicios</h6>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
                     <p>
-                        <a href="#!">Desarrollo Web</a>
+                        <a href="./construccion.html">Reloj</a>
                     </p>
                     <p>
-                        <a href="#!">Desarrollo Apps</a>
+                        <a href="./construccion.html">Zapatillas</a>
                     </p>
                     <p>
-                        <a href="#!">Tiendas Virtuales</a>
+                        <a href="./construccion.html">Zapatillas</a>
                     </p>
                 </div>
 
@@ -171,16 +161,16 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Links</h6>
                     <p>
-                        <a href="#!">Tu cuenta</a>
+                        <a href="./construccion.html">Tu cuenta</a>
                     </p>
                     <p>
-                        <a href="#!">Conviertete en colaborador</a>
+                        <a href="./construccion.html">Conviertete en colaborador</a>
                     </p>
                     <p>
-                        <a href="#!">Valoraciones de envio</a>
+                        <a href="./construccion.html">Valoraciones de envio</a>
                     </p>
                     <p>
-                        <a href="#!">Ayuda</a>
+                        <a href="./construccion.html">Ayuda</a>
                     </p>
                 </div>
 
@@ -206,7 +196,7 @@
 
                 <div class="col-md-7 col-lg-8">
                     <p class="text-center text-md-left">© 2020 Copyright:
-                        <a href="">
+                        <a href="construccion.html">
                             <strong> León, Gonzalez, Torres, Pérez, Montero</strong>
                         </a>
                     </p>
@@ -248,6 +238,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!-- end dependeces -->
     <script src="./js/localstoraje.js"></script>
+    <script src="js/modal.js"></script>
     <script src="./js/utils.js"></script>
     <script src="./js/admin.js"></script>
 </body>
