--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelance</title>
+    <title>Mi tienda</title>
     <link rel="stylesheet" href="./css/bootrap.min.css">
     <script src="https://kit.fontawesome.com/c95e397b61.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -18,9 +18,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 d-flex flex-row  justify-content-between">
+                <div id="tit" class="col-md-2 d-flex flex-row  justify-content-between">
                     <img src="img/discount.png" class="img-fluid col-2 col-md-6" width="40px" alt="">
-                    <a class="navbar-brand col-6">DesignBlog</a>
+                    <a class="navbar-brand col-6">OnlineStore</a>
                 </div>
                 <!-- icon navbar -->
                 <button class="navbar-toggler" data-target="#collapase" data-toggle="collapse" aria-controls="collapase" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
                                 <a class="nav-link" href="construccion.html" tabindex="-1" aria-disabled="true">Acerca de</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tienda.html" class="nav-link">Servicio</a>
+                                <a href="./tienda.html" class="nav-link">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./admin.html" class="nav-link">Admin</a>
@@ -66,14 +66,14 @@
                                 =                 BIenvenidad   =
                                 =============================================*/
                                  -->
-                <div class="jumbotron">
+                <div id="bienv" class="jumbotron">
                     <h1 class="display-4">Bienvenido</h1>
                     <p class="lead">Acerca de nosotros</p>
                     <hr class="my-4">
                     <p>
-                        Somos una empresa que brinda servicios relacionados con el UX que nace con la idea de dar soluciones gráficas comunicacionales al mercado regional y nacional de manera integral, conformada por una unidad fuerte de trabajo, armónica y multifacética que
-                        de forma holística enriquece el resultado final de cada uno de los proyectos,gracias a que cada uno de los integrantes da lo mejor de si en función del éxito conjunto.</p>
-                    <a class="btn btn-success ml-4" href="tienda.html">Servicio</a>
+                        Somos una empresa que brinda productos de forma virtual en el ambito de comercio electronico, ofreciendo productos a nivel nacional de manera integral, conformada por una unidad fuerte de trabajo y armónica, gracias a que cada uno de los integrantes da
+                        lo mejor de si en función del éxito conjunto.</p>
+                    <a class="btn btn-success ml-4" href="tienda.html">Productos</a>
                 </div>
             </div>
             <div class="col-md-6">
@@ -94,19 +94,19 @@
                         <div class="carousel-item active">
                             <img src="img/reloj.jpg" class="img-fluid" alt="">
                             <div class="carousel-caption">
-                                <h3>Desarrollo Web</h3>
+                                <h3>Reloj</h3>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/zapatillas.jpg" class="img-thumbnail " alt="">
                             <div class="carousel-caption">
-                                <h3>Desarrollo Apps</h3>
+                                <h3>Zapatillas</h3>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/zapatilla2.jpg" class="img-thumbnail " alt="">
                             <div class="carousel-caption">
-                                <h3>Tiendas Virtuales</h3>
+                                <h3>Zapatillas</h3>
                             </div>
                         </div>
                     </div>
@@ -132,22 +132,23 @@
             <div class="row text-center text-md-left mt-3 pb-3">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Nosotros</h6>
-                    <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional e internacional, sedes en diferentes partes de diferentes paises, !GRACIAS POR VISITARNOS¡
+                    <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional, con sedes en diferentes partes del país,
+                        <br> !GRACIAS POR VISITARNOS¡
                     </p>
                 </div>
 
                 <hr class="w-100 clearfix d-md-none">
 
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Servicios</h6>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
                     <p>
-                        <a href="./construccion.html">Desarrollo Web</a>
+                        <a href="./construccion.html">Reloj</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Desarrollo Apps</a>
+                        <a href="./construccion.html">Zapatillas</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Tiendas Virtuales</a>
+                        <a href="./construccion.html">Zapatillas</a>
                     </p>
                 </div>
 
@@ -156,7 +157,7 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Links</h6>
                     <p>
-                        <a href="./construccion.html"> Tu cuenta</a>
+                        <a href="./construccion.html">Tu cuenta</a>
                     </p>
                     <p>
                         <a href="./construccion.html">Conviertete en colaborador</a>
