--- a/src/tienda.html
+++ b/src/tienda.html
@@ -168,14 +168,15 @@
         </div>
     </div>
 
-
-
     <!--           
     /*=============================================
     =           footer           =
     =============================================*/
                                  -->
 
+    <div id="modalGuia" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+
+    </div>
     <div id="modalTienda" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 
     </div>
