--- a/src/index.html
+++ b/src/index.html
@@ -18,37 +18,39 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <div class="row">
-                <div id="tit" class="col-md-2 d-flex flex-row  justify-content-between">
-                    <img src="img/discount.png" class="img-fluid col-2 col-md-6" width="40px" alt="">
-                    <a class="navbar-brand col-6">OnlineStore</a>
+                <div id="tit" class="col-md-6 col-sm-8 col-lg-3 d-flex flex-row  justify-content-between">
+                    <img src="img/discount.png" class="img-fluid" width="50px" alt=" ">
+                    <a class="navbar-brand col- text-sm-center ">OnlineStore</a>
                 </div>
                 <!-- icon navbar -->
-                <button class="navbar-toggler" data-target="#collapase" data-toggle="collapse" aria-controls="collapase" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="col-md-6">
-                    <div id="collapase" class="collapse navbar-collapse">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#Inicio">Inicio<span class="sr-only">(current)</span></a>
+                <button class="navbar-toggler " data-target="#collapase " data-toggle="collapse " aria-controls="collapase " aria-expanded="false " aria-label="Toggle navigation ">
+                    <span class="navbar-toggler-icon "></span>
+                    </button>
+                <div class="col-sm-8 col-md-4 col-lg-4">
+                    <div id="collapase " class="collapse navbar-collapse ">
+                        <ul class="navbar-nav mr-auto ">
+                            <li class="nav-item ">
+                                <a class="nav-link " href="#Inicio ">Inicio<span class="sr-only ">(current)</span></a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="construccion.html" tabindex="-1" aria-disabled="true">Acerca de</a>
+                            <li class="nav-item ">
+                                <a class="nav-link " href="construccion.html " tabindex="-1 " aria-disabled="true ">Acerca de</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="./tienda.html" class="nav-link">Productos</a>
+                            <li class="nav-item ">
+                                <a href="./tienda.html " class="nav-link ">Productos</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="./admin.html" class="nav-link">Admin</a>
+                            <li class="nav-item ">
+                                <a href="./admin.html " class="nav-link ">Admin</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <form class="form-inline my-2 my-lg-0 col-md-4">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                <form class="form-inline my-2 my-lg-0 col-lg-5 col-md-4">
+                    <input class="form-control mr-sm-2 " type="search " placeholder="Buscar " aria-label="Search ">
+                    <button class="btn btn-outline-success my-2 my-sm-0 " type="submit ">Buscar</button>
                 </form>
+
             </div>
+
         </div>
     </nav>
     <!-- 
@@ -58,25 +60,25 @@
                                  -->
 
 
-    <main id="Inicio" class="container mt-4">
-        <div class="row">
-            <div class="col-md-6">
+    <main id="Inicio " class="container mt-4 ">
+        <div class="row ">
+            <div class="col-md-6 ">
                 <!-- 
                                 /*=============================================
                                 =                 BIenvenidad   =
                                 =============================================*/
                                  -->
-                <div id="bienv" class="jumbotron">
-                    <h1 class="display-4">Bienvenido</h1>
-                    <p class="lead">Acerca de nosotros</p>
-                    <hr class="my-4">
+                <div id="bienv " class="jumbotron ">
+                    <h1 class="display-4 ">Bienvenido</h1>
+                    <p class="lead ">Acerca de nosotros</p>
+                    <hr class="my-4 ">
                     <p>
                         Somos una empresa que brinda productos de forma virtual en el ambito de comercio electronico, ofreciendo productos a nivel nacional de manera integral, conformada por una unidad fuerte de trabajo y armónica, gracias a que cada uno de los integrantes da
                         lo mejor de si en función del éxito conjunto.</p>
-                    <a class="btn btn-success ml-4" href="tienda.html">Productos</a>
+                    <a class="btn btn-success ml-4 " href="tienda.html ">Productos</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 ">
                 <!--                                
                                 /*=============================================
                                 =                  caarrrousel   =
@@ -84,142 +86,145 @@
                                  -->
                 <!-- required bootstrap js -->
                 <!-- add 'carousel-slider' snippet in css -->
-                <div id="demo" class="carousel slide" data-ride="carousel">
-                    <ul class="carousel-indicators">
-                        <li data-target="#demo" data-slide-to="0" class="active"></li>
-                        <li data-target="#demo" data-slide-to="1"></li>
-                        <li data-target="#demo" data-slide-to="2"></li>
+                <div id="demo " class="carousel slide " data-ride="carousel ">
+                    <ul class="carousel-indicators ">
+                        <li data-target="#demo " data-slide-to="0 " class="active "></li>
+                        <li data-target="#demo " data-slide-to="1 "></li>
+                        <li data-target="#demo " data-slide-to="2 "></li>
                     </ul>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/reloj.jpg" class="img-fluid" alt="">
-                            <div class="carousel-caption">
+                    <div class="carousel-inner ">
+                        <div class="carousel-item active ">
+                            <img src="img/reloj.jpg " class="img-fluid " alt=" ">
+                            <div class="carousel-caption ">
                                 <h3>Reloj</h3>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="img/zapatillas.jpg" class="img-thumbnail " alt="">
-                            <div class="carousel-caption">
+                        <div class="carousel-item ">
+                            <img src="img/zapatillas.jpg " class="img-thumbnail " alt=" ">
+                            <div class="carousel-caption ">
                                 <h3>Zapatillas</h3>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="img/zapatilla2.jpg" class="img-thumbnail " alt="">
-                            <div class="carousel-caption">
+                        <div class="carousel-item ">
+                            <img src="img/zapatilla2.jpg " class="img-thumbnail " alt=" ">
+                            <div class="carousel-caption ">
                                 <h3>Zapatillas</h3>
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
+                    <a class="carousel-control-prev " href="#demo " data-slide="prev ">
+                        <span class="carousel-control-prev-icon "></span>
                     </a>
-                    <a class="carousel-control-next" href="#demo" data-slide="next">
-                        <span class="carousel-control-next-icon"></span>
+                    <a class="carousel-control-next " href="#demo " data-slide="next ">
+                        <span class="carousel-control-next-icon "></span>
                     </a>
                 </div>
             </div>
         </div>
     </main>
-    <!-- 
-                                
+
+    <!--                          
     /*=============================================
     =           footer           =
-    =============================================*/
-    
-                                 -->
-    <footer class="contenedor-fo">
-        <div class="container text-center text-md-left">
-            <div class="row text-center text-md-left mt-3 pb-3">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Nosotros</h6>
+    =============================================*/                    -->
+
+    <div id="modalGuia" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+
+    </div>
+
+    <footer class="contenedor-fo ">
+        <div class="container text-center text-md-left ">
+            <div class="row text-center text-md-left mt-3 pb-3 ">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Nosotros</h6>
                     <p>Hola, bienvenido a nuestra tienda, somos una empresa nacional, con sedes en diferentes partes del país,
                         <br> !GRACIAS POR VISITARNOS¡
                     </p>
                 </div>
 
-                <hr class="w-100 clearfix d-md-none">
+                <hr class="w-100 clearfix d-md-none ">
 
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Productos</h6>
                     <p>
-                        <a href="./construccion.html">Reloj</a>
+                        <a href="./construccion.html ">Reloj</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Zapatillas</a>
+                        <a href="./construccion.html ">Zapatillas</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Zapatillas</a>
+                        <a href="./construccion.html ">Zapatillas</a>
                     </p>
                 </div>
 
-                <hr class="w-100 clearfix d-md-none">
+                <hr class="w-100 clearfix d-md-none ">
 
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Links</h6>
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Links</h6>
                     <p>
-                        <a href="./construccion.html">Tu cuenta</a>
+                        <a href="./construccion.html ">Tu cuenta</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Conviertete en colaborador</a>
+                        <a href="./construccion.html ">Conviertete en colaborador</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Valoraciones de envio</a>
+                        <a href="./construccion.html ">Valoraciones de envio</a>
                     </p>
                     <p>
-                        <a href="./construccion.html">Ayuda</a>
+                        <a href="./construccion.html ">Ayuda</a>
                     </p>
                 </div>
 
-                <hr class="w-100 clearfix d-md-none">
+                <hr class="w-100 clearfix d-md-none ">
 
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h6 class="text-uppercase mb-4 font-weight-bold ">Contacto</h6>
                     <p>
-                        <i class="fas fa-home mr-3"></i> Chiclayo - Derrama Magisterial MZ G2-LOTE4 (SEDE)</p>
+                        <i class="fas fa-home mr-3 "></i> Chiclayo - Derrama Magisterial MZ G2-LOTE4 (SEDE)</p>
                     <p>
-                        <i class="fas fa-envelope mr-3"></i> infoTienda@usat.com</p>
+                        <i class="fas fa-envelope mr-3 "></i> infoTienda@usat.com</p>
                     <p>
-                        <i class="fas fa-phone mr-3"></i> +51943130397</p>
+                        <i class="fas fa-phone mr-3 "></i> +51943130397</p>
                     <p>
-                        <i class="fas fa-print mr-3"></i> +51963258741</p>
+                        <i class="fas fa-print mr-3 "></i> +51963258741</p>
                 </div>
 
             </div>
 
-            <hr class="bg-white">
+            <hr class="bg-white ">
 
-            <div class="row d-flex align-items-center">
+            <div class="row d-flex align-items-center ">
 
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-7 col-lg-8 ">
 
-                    <p class="text-center text-md-left">© 2020 Copyright:
-                        <a href="construccion.html">
+                    <p class="text-center text-md-left ">© 2020 Copyright:
+                        <a href="construccion.html ">
                             <strong> León, Gonzalez, Torres, Pérez, Montero</strong>
                         </a>
                     </p>
                 </div>
-                <div class="col-md-5 col-lg-4 ml-lg-0">
+                <div class="col-md-5 col-lg-4 ml-lg-0 ">
 
-                    <div class="text-center text-md-right">
-                        <ul class="list-unstyled list-inline">
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                                    <i class="fab fa-facebook"></i>
+                    <div class="text-center text-md-right ">
+                        <ul class="list-unstyled list-inline ">
+                            <li class="list-inline-item ">
+                                <a class="btn-floating btn-sm rgba-white-slight mx-1 ">
+                                    <i class="fab fa-facebook "></i>
                                 </a>
                             </li>
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                                    <i class="fab fa-twitter"></i>
+                            <li class="list-inline-item ">
+                                <a class="btn-floating btn-sm rgba-white-slight mx-1 ">
+                                    <i class="fab fa-twitter "></i>
                                 </a>
                             </li>
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                                    <i class="fab fa-google-plus-g"></i>
+                            <li class="list-inline-item ">
+                                <a class="btn-floating btn-sm rgba-white-slight mx-1 ">
+                                    <i class="fab fa-google-plus-g "></i>
                                 </a>
                             </li>
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                                    <i class="fab fa-linkedin-in"></i>
+                            <li class="list-inline-item ">
+                                <a class="btn-floating btn-sm rgba-white-slight mx-1 ">
+                                    <i class="fab fa-linkedin-in "></i>
                                 </a>
                             </li>
                         </ul>
@@ -229,10 +234,12 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
 
+    <script src="js/modal.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
