--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,9 @@
                     <img src="img/discount.png" class="img-fluid" width="50px" alt=" ">
                     <a class="navbar-brand col- text-sm-center ">OnlineStore</a>
                 </div>
-                <!-- icon navbar -->
-                <button class="navbar-toggler " data-target="#collapase " data-toggle="collapse " aria-controls="collapase " aria-expanded="false " aria-label="Toggle navigation ">
-                    <span class="navbar-toggler-icon "></span>
-                    </button>
+               
                 <div class="col-sm-8 col-md-4 col-lg-4">
-                    <div id="collapase " class="collapse navbar-collapse ">
+                    <div id="collapase" class="collapse navbar-collapse ">
                         <ul class="navbar-nav mr-auto ">
                             <li class="nav-item ">
                                 <a class="nav-link " href="#Inicio ">Inicio<span class="sr-only ">(current)</span></a>
@@ -43,7 +40,12 @@
                             </li>
                         </ul>
                     </div>
+                          <!-- icon navbar -->
+                 <button class="navbar-toggler" data-target="#collapase " data-toggle="collapse" aria-controls="collapase" aria-expanded="false " aria-label="Toggle navigation ">
+                  <span class="navbar-toggler-icon "></span>
+                </button>
                 </div>
+           
                 <form class="form-inline my-2 my-lg-0 col-lg-5 col-md-4">
                     <input class="form-control mr-sm-2 " type="search " placeholder="Buscar " aria-label="Search ">
                     <button class="btn btn-outline-success my-2 my-sm-0 " type="submit ">Buscar</button>
@@ -234,9 +236,12 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script> -->
+    <script src="libs/jquery.js"></script>
+    <script src="libs/popper.js"></script>
+    <script src="libs/bootsrap.js"></script>
 
     <script src="js/modal.js"></script>
     <script src="js/index.js"></script>
